# -adaptive-llm-inference

./: .env.example  .gitignore  AGENTS.md  DATA_AVAILABILITY.md  FINAL_MANUSCRIPT_ASSET_INDEX.md  FINAL_MANUSCRIPT_QUICKSTART.md  MANUSCRIPT_ARTIFACTS.md  MANUSCRIPT_REPRODUCTION.md  MANUSCRIPT_SUPPORT_ADDITIONS.md  PAPER_ARTIFACT_STATUS.md  PUBLIC_RELEASE_CHECKLIST.md  README.md  REPRODUCIBILITY.md  pyproject.toml
config/: token_budget_router_default.yaml
configs/: action_space_catalog.yaml  adaptive_policy_gsm8k.yaml  adaptive_policy_v2_gsm8k.yaml  adaptive_policy_v3_gsm8k.yaml  adaptive_policy_v4_gsm8k.yaml  adaptive_policy_v5_gsm8k.yaml  adaptive_policy_v6_offline.yaml  adaptive_policy_v7_offline.yaml  best_of_n.yaml  best_route_adapted.yaml  equal_allocator.yaml  expanded_strategy_smoke_test_gsm8k.yaml  five_action_space.yaml  greedy.yaml  hybrid_router_extension_demo.yaml  hybrid_router_real_gsm8k.yaml  hybrid_router_real_hard_gsm8k.yaml  hybrid_router_real_math500.yaml  hybrid_router_smoke.yaml  learned_router_default.yaml  mode_then_budget_gsm8k.yaml  model_sampling_diagnostic_gsm8k.yaml  oracle_strategy_eval_gsm8k.yaml  oracle_subset_eval_gsm8k.yaml  real_budget_sweep_gsm8k.yaml  real_gain_table_gsm8k.yaml  real_llm_gsm8k.yaml  real_llm_gsm8k_diagnostic.yaml  selective_escalation_gsm8k.yaml  self_consistency.yaml  simulated_equal.yaml  simulated_mckp.yaml  simulated_multi_seed.yaml  simulated_sweep.yaml  strategy_diagnostic_math500.yaml  strategy_expansion_gsm8k.yaml  strong_baselines_dummy.yaml  strong_baselines_hf_smoke.yaml  strong_baselines_real.yaml  strong_baselines_real_smoke.yaml  (+8 more)
data/: bbh_sample.jsonl  consistency_benchmark.json  gpqa_diamond_normalized.jsonl  mmlu_pro_sample.jsonl  musr_normalized.jsonl  musr_sample.jsonl  real_aime2024_routing_dataset.csv  real_gsm8k_routing_dataset.csv  (+10 more)
(+660 files in other folders)
