[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adaptive-llm-inference"
version = "0.1.0"
description = "Adaptive test-time compute allocation for LLM reasoning under budget constraints"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    # datasets 3.x aligns with current pyarrow (PyExtensionType removed in older HF datasets + new pyarrow).
    "datasets>=3.0",
    "pyyaml>=6.0",
    "numpy>=1.24",
    "requests>=2.28",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "matplotlib>=3.8",
    "pytest>=7.0",
    "ruff>=0.4",
    "scikit-learn>=1.3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
